--- a/SchoolExpress.Domain/SchoolExpress.Domain.csproj
+++ b/SchoolExpress.Domain/SchoolExpress.Domain.csproj
@@ -45,7 +45,7 @@
     <Compile Include="IEntity.cs" />
     <Compile Include="ObjectExtension.cs" />
     <Compile Include="Role.cs" />
-    <Compile Include="ScheduleDetail.cs" />
+    <Compile Include="CourseScheduleDetail.cs" />
     <Compile Include="ClassRoom.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Enrollment.cs" />
@@ -53,7 +53,7 @@
     <Compile Include="EnumUtil.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Schedule.cs" />
+    <Compile Include="CourseSchedule.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Day.cs" />
   </ItemGroup>
