--- a/SchoolExpress.Infrastructure/SchoolExpress.Infrastructure.csproj
+++ b/SchoolExpress.Infrastructure/SchoolExpress.Infrastructure.csproj
@@ -64,8 +64,8 @@
     <Compile Include="Configurations\GradeConfiguration.cs" />
     <Compile Include="Configurations\PersonConfiguration.cs" />
     <Compile Include="Configurations\RoleConfiguration.cs" />
-    <Compile Include="Configurations\ScheduleConfiguration.cs" />
-    <Compile Include="Configurations\ScheduleDetailConfiguration.cs" />
+    <Compile Include="Configurations\CourseScheduleConfiguration.cs" />
+    <Compile Include="Configurations\CourseScheduleDetailConfiguration.cs" />
     <Compile Include="Configurations\UserConfiguration.cs" />
     <Compile Include="DbContexts\SchoolExpressDbContext.cs" />
     <Compile Include="DbContexts\SchoolExpressInitializer.cs" />
@@ -84,6 +84,14 @@
     <Compile Include="Migrations\201703252141133_Rename_People_To_Persons.Designer.cs">
       <DependentUpon>201703252141133_Rename_People_To_Persons.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804221349431_Rename_Table_Schedule_And_ScheduleDetail.cs" />
+    <Compile Include="Migrations\201804221349431_Rename_Table_Schedule_And_ScheduleDetail.Designer.cs">
+      <DependentUpon>201804221349431_Rename_Table_Schedule_And_ScheduleDetail.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804221707480_Add_Self_Reference_One_To_One_On_Table_Role.cs" />
+    <Compile Include="Migrations\201804221707480_Add_Self_Reference_One_To_One_On_Table_Role.Designer.cs">
+      <DependentUpon>201804221707480_Add_Self_Reference_One_To_One_On_Table_Role.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AcademicTermRepository.cs" />
@@ -97,8 +105,8 @@
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Helpers\RepositoryProvider.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
-    <Compile Include="Repositories\ScheduleDetailRepository.cs" />
-    <Compile Include="Repositories\ScheduleRepository.cs" />
+    <Compile Include="Repositories\CourseScheduleDetailRepository.cs" />
+    <Compile Include="Repositories\CourseScheduleRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Uows\SchoolExpressUow.cs" />
   </ItemGroup>
@@ -125,6 +133,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703252141133_Rename_People_To_Persons.resx">
       <DependentUpon>201703252141133_Rename_People_To_Persons.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804221349431_Rename_Table_Schedule_And_ScheduleDetail.resx">
+      <DependentUpon>201804221349431_Rename_Table_Schedule_And_ScheduleDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804221707480_Add_Self_Reference_One_To_One_On_Table_Role.resx">
+      <DependentUpon>201804221707480_Add_Self_Reference_One_To_One_On_Table_Role.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
