--- a/SchoolExpress.WebService/SchoolExpress.WebService.csproj
+++ b/SchoolExpress.WebService/SchoolExpress.WebService.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Controllers\Api\AcademicTermsApiController.cs" />
     <Compile Include="Controllers\Api\AssignmentsApiController.cs" />
     <Compile Include="Controllers\Api\BaseApiController.cs" />
+    <Compile Include="Controllers\Api\CrudApiController.cs" />
     <Compile Include="Controllers\Api\ClassRoomsApiController.cs" />
     <Compile Include="Controllers\Api\CoursesApiController.cs" />
     <Compile Include="Controllers\Api\EnrollmentDetailsApiController.cs" />
@@ -161,8 +162,8 @@
     <Compile Include="Controllers\Api\GradesApiController.cs" />
     <Compile Include="Controllers\Api\PersonsApiController.cs" />
     <Compile Include="Controllers\Api\RolesApiController.cs" />
-    <Compile Include="Controllers\Api\ScheduleDetailsApiController.cs" />
-    <Compile Include="Controllers\Api\SchedulesApiController.cs" />
+    <Compile Include="Controllers\Api\CourseScheduleDetailsApiController.cs" />
+    <Compile Include="Controllers\Api\CourseSchedulesApiController.cs" />
     <Compile Include="Controllers\Api\UsersApiController.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="CustomContentTypeProvider.cs" />
