--- a/SchoolExpress.WebService/SchoolExpress.WebService.csproj
+++ b/SchoolExpress.WebService/SchoolExpress.WebService.csproj
@@ -185,10 +185,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Filters\AnonymousAuthorizeAttribute.cs" />
+    <Compile Include="Filters\AnonymousAuthorizeFilter.cs" />
     <Compile Include="Utils\HttpActionResult.cs" />
     <Compile Include="Providers\CustomJwtAuthorizationProvider.cs" />
-    <Compile Include="Filters\JwtAuthorizeAttribute.cs" />
+    <Compile Include="Filters\JwtAuthorizeFilter.cs" />
     <Compile Include="Handlers\BasicAuthenticationHandler.cs" />
     <Compile Include="Controllers\Api\AcademicTermsApiController.cs" />
     <Compile Include="Controllers\Api\AccountsApiController.cs" />
@@ -204,23 +204,23 @@
     <Compile Include="Controllers\Api\PersonsApiController.cs" />
     <Compile Include="Controllers\Api\CourseScheduleDetailsApiController.cs" />
     <Compile Include="Controllers\Api\CourseSchedulesApiController.cs" />
-    <Compile Include="Credential.cs" />
+    <Compile Include="Models\CredentialModel.cs" />
     <Compile Include="Models\AudienceModel.cs" />
     <Compile Include="Models\UserLoginModel.cs" />
     <Compile Include="Providers\CustomContentTypeProvider.cs" />
     <Compile Include="Providers\CustomDirectRouteProvider.cs" />
     <Compile Include="Models\UserRegisterModel.cs" />
-    <Compile Include="HttpContext.cs" />
-    <Compile Include="OwinContextMiddleware.cs" />
+    <Compile Include="Utils\HttpContext.cs" />
+    <Compile Include="Utils\OwinContextMiddleware.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CustomOAuthAuthorizationProvider.cs" />
     <Compile Include="Utils\SHA.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UnityConfig.cs" />
-    <Compile Include="UnityResolver.cs" />
-    <Compile Include="ValidationActionFilter.cs" />
-    <Compile Include="OwinService.cs" />
+    <Compile Include="Utils\UnityResolver.cs" />
+    <Compile Include="Filters\ValidationActionFilter.cs" />
+    <Compile Include="RunService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\app\css\main.css">
