--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -8,15 +8,28 @@
     <section name="entityFramework"
              type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
              requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
+        <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
+        <arg key="level" value="Error" />
+        <arg key="showLevel" value="true" />
+        <arg key="showLogName" value="false" />
+        <arg key="showDataTime" value="true" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
+        <arg key="useTraceSource" value="false" />
+      </factoryAdapter>
+    </logging>
+  </common>
   <system.diagnostics>
-    <trace>
+    <trace autoflush="true">
       <listeners>
-        <add
-          type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          name="AzureDiagnostics">
-          <filter type="" />
-        </add>
+        <clear/>
+        <add name="AzureDiagnostics" type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
+        <remove name="Default" />
       </listeners>
     </trace>
   </system.diagnostics>
@@ -27,7 +40,8 @@
   </connectionStrings>
   <appSettings>
     <add key="BaseUri" value="http://localhost:9000/" />
-    <add key="AuthenticationMode" value="NONE" /> <!-- [ NONE | JWT | OAUTH ] -->
+    <!-- AuthenticationMode [ NONE | JWT | OAUTH ] -->
+    <add key="AuthenticationMode" value="NONE" />    
     <add key="TokenExpiration" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
   </appSettings>
@@ -35,7 +49,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+    <assemblyBinding
+      xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
@@ -98,18 +113,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <common>
-    <logging>
-      <factoryAdapter
-        type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
-        <arg key="level" value="DEBUG" />
-        <arg key="showDateTime" value="true" />
-        <arg key="showLogName" value="true" />
-        <arg key="showLevel" value="true" />
-        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
-      </factoryAdapter>
-    </logging>
-  </common>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
